# EPIONCHO-IBM

./: .gitignore  .pre-commit-config.yaml  Distribution of age at start EPIONCHO-IBM.xlsx  README.md  epioncho.drawio  new.R  new_questions.txt  old.R  processData.py  pyproject.toml  questions.txt
.github/workflows/: addComments.yml  benchmarkForPR.yml  endToEndTest.yml  main.yml
auto_tests/: .coveragerc  auto_benchmarker.py  auto_benchmarker_config.py  auto_benchmarker_gen.py  calc_failure_prob.py  pytest_config.json
auto_tests/auto_benchmark2/: benchmark.json  settings.json
auto_tests/auto_benchmark4/: benchmark.json  data_hash.txt  settings.json
auto_tests/benchmark/: settings.json
auto_tests/definitions/: auto_benchmarker.py  utils.py
auto_tests/pytests/: conftest.py  test_auto_benchmark.py
epioncho_ibm/: __init__.py  advance.py  blackfly.py  derived_params.py  endgame_simulation.py  exposure.py  helpers.py  main.py  measure.py  microfil.py  params.py  people.py  run_simulation.py  simulation.py  state.py  tools.py  treatment.py  types.py  utils.py  worms.py
epioncho_ibm/state/: params.py  (+7 more)
examples/: compare_model_to_r.R  final_endgame_single_hdf5_single_proc.py  final_run_state_and_scenario.py  import_files_one_timestep_in_R.R  post_processing_function.py  prob_elim_scenario.json  scenario-1.json  scenario1.json  scenario2a.json  scenario2b.json  scenario3a.json  scenario3b.json  scenario3c.json  simulation_template.py  test.py  test_binom.py  test_compare.py  test_convert_endgame.py  test_different_drug.py  test_end_to_end.py  test_endgame_parallel.py  test_endgame_simulation.py  test_endgame_single_hdf5_parallel.py  test_epilepsy.py  test_epilepsy_parallel.py  test_import_from_r.py  test_mf_prevalence.py  test_new.py  test_new_changes.py  test_new_changes_hdf5.py  test_new_changes_sequela.py  test_one_hdf5_parallel.py  test_output.py  test_output_excel.py  test_parallel.py  test_prob_elim.py  test_r_comparison.py  test_r_comparison2.py  test_scenario_files.py  test_sequela.py  (+3 more)
test_outputs/: README.md  compare_model_to_r.R
tests/: auto_benchmarker.py  auto_benchmarker_config.py  auto_benchmarker_gen.py  benchmark_data_types.py  benchmark_definition.py  benchmark_gen.py  benchmark_test_epioncho.py  calc_failure_prob.py  conftest.py  ntd_settings.json  pytest.ini  pytest_config.json  pytest_config.py  test_benchmark.py  test_general.py
(+49 files in other folders)
