[tool.poetry]
name = "epioncho-ibm"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "^1.22.3"
pydantic = "^1.9.0"
tqdm = "^4.64.1"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
pre-commit = "^2.17.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.18.3"
pytest-rerunfailures = "^10.2"
scipy = "^1.8.1"
joblib = "^1.1.0"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"