[tool.poetry]
name = "epioncho-ibm"
version = "1.0.1dev"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "^1.22.3"
pydantic = "^1.9.0"
tqdm = "^4.64.1"
fast-binomial = {git = "https://github.com/NTD-Modelling-Consortium/fast-binomial.git"}
pytest-trust-random = {git = "https://github.com/NTD-Modelling-Consortium/pytest-trust-random.git"}
hdf5-dataclass = {git = "https://github.com/NTD-Modelling-Consortium/hdf5-dataclass.git"}
endgame-simulations = {git = "https://github.com/NTD-Modelling-Consortium/endgame-simulations.git"}
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
pre-commit = "^2.17.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.18.3"
pytest-rerunfailures = "^10.2"
joblib = "^1.1.0"
ipykernel = "^6.17.1"
snakeviz = "^2.1.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
